fix: correct overflow properties for sidebar

--- a/style/tailwind.css
+++ b/style/tailwind.css
@@ -58,7 +58,7 @@
     color: #ecf0f1;
     padding: 0.1rem;
     overflow-y: auto;
-    overflow: visible;
+    overflow-x: hidden;
 }
 
 .ontology-title {
@@ -195,7 +195,6 @@
     transition: opacity 0.4s, transform 0.4s;
     opacity: 1;
     transform: translateX(0);
-    overflow-x: visible;
 }
 
 .sidebar-collapse .sidebar-content {
